<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/leftarrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/left" />

    <TextView
        android:id="@+id/producttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/producttitle"
        android:textColor="@color/strong"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/leftarrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/search"
        app:layout_constraintStart_toEndOf="@+id/producttitle"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search" />

    <ImageView
        android:id="@+id/more"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/more"
        android:contentDescription="@string/more"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/productimage"
        android:layout_width="375dp"
        android:layout_height="238dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/product_image"
        android:contentDescription="@string/productimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/producttitle" />

    <ImageView
        android:id="@+id/slideshow"
        android:layout_width="72dp"
        android:layout_height="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/slide_show_image"
        android:contentDescription="@string/slideshow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productimage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/producttext"
        android:textColor="@color/strong"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideshow" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/add_favorite_icon"
        android:contentDescription="@string/favourites"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/productimage" />

    <ImageView
        android:id="@+id/starrating"
        android:layout_width="96dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/star_rating"
        android:contentDescription="@string/starrating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/price"
        android:textColor="@color/light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starrating" />

    <TextView
        android:id="@+id/Size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/size"
        android:textColor="@color/strong"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <ImageView
        android:id="@+id/selectsize"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/product_size"
        android:contentDescription="@string/selectsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Size" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/Color"
        android:textColor="@color/strong"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectsize" />

    <ImageView
        android:id="@+id/selectcolor"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/color_select"
        android:contentDescription="@string/selectcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>