<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityReview">

    <ImageView
        android:id="@+id/leftarrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/left" />

    <TextView
        android:id="@+id/fivereview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/_5_review"
        android:textColor="@color/strong"
        app:layout_constraintStart_toEndOf="@+id/leftarrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/line_39"
        android:contentDescription="@string/line39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fivereview" />


    <ImageView
        android:id="@+id/allreview"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/filter_review"
        android:contentDescription="@string/filterreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile"
        android:contentDescription="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allreview" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="343dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/profiletext"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />


    <ImageView
        android:id="@+id/productpicture"
        android:layout_width="240dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/product_picture"
        android:contentDescription="@string/productpicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/date"
        android:textColor="@color/text"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productpicture"
        tools:ignore="SmallSp" />




    <ImageView
        android:id="@+id/profile2"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/profile__1_"
        android:contentDescription="@string/profile2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/profiletext2"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/profiletext2"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile2"/>

    <TextView
        android:id="@+id/date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/date"
        android:textColor="@color/text"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profiletext2"
        tools:ignore="SmallSp" />


    <ImageView
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/profile3"
        android:id="@+id/profile3"
        android:layout_marginTop="24dp"
        android:background="@drawable/profile__2_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date2">


    <TextView
        android:id="@+id/profiletext3"
        android:layout_width="343dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/profiletext"
        android:textColor="@color/text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile3" />

    <ImageView
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>